--- a/mgine2d.vcxproj.filters
+++ b/mgine2d.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\EntityManager.cpp">
       <Filter>Pliki źródłowe\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="src\ZSpawner.cpp">
+      <Filter>Pliki źródłowe\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
@@ -68,6 +71,9 @@
     <ClInclude Include="src\EntityManager.h">
       <Filter>Pliki nagłówkowe\Entities</Filter>
     </ClInclude>
+    <ClInclude Include="src\ZSpawner.h">
+      <Filter>Pliki nagłówkowe\Entities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="res\TODO.txt">
@@ -85,6 +91,12 @@
       <Filter>Pliki zasobów</Filter>
     </Image>
     <Image Include="res\bigzombie.png">
+      <Filter>Pliki zasobów</Filter>
+    </Image>
+    <Image Include="..\GameProject\Content\Sprites\zSpawner.png">
+      <Filter>Pliki zasobów</Filter>
+    </Image>
+    <Image Include="res\zSpawner.png">
       <Filter>Pliki zasobów</Filter>
     </Image>
   </ItemGroup>
