--- a/mgine2d.vcxproj.filters
+++ b/mgine2d.vcxproj.filters
@@ -204,6 +204,12 @@
     <Image Include="res\PlayerTextures\player32.png">
       <Filter>Pliki zasobów</Filter>
     </Image>
+    <Image Include="res\PlayerTextures\new_player1.png">
+      <Filter>Pliki zasobów</Filter>
+    </Image>
+    <Image Include="res\Treasure Hunters\Palm Tree Island\Sprites\Terrain\lab.png">
+      <Filter>Pliki zasobów</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\level\TestLevel.ldtk" />
