added lights system from raylib example

--- a/mgine2d.vcxproj
+++ b/mgine2d.vcxproj
@@ -153,8 +153,11 @@
     <ProjectReference />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AnimatedDecor.cpp" />
     <ClCompile Include="src\Door.cpp" />
     <ClCompile Include="src\Collisions.cpp" />
+    <ClCompile Include="src\Elevator.cpp" />
+    <ClCompile Include="src\ElevatorCallSwitch.cpp" />
     <ClCompile Include="src\LevelManager.cpp" />
     <ClCompile Include="src\LevelPortal.cpp" />
     <ClCompile Include="src\SolidTile.cpp" />
@@ -166,6 +169,9 @@
     <ClCompile Include="src\TitleScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ElevatorCallSwitch.h" />
+    <ClInclude Include="src\Elevator.h" />
+    <ClInclude Include="src\AnimatedDecor.h" />
     <ClInclude Include="src\Door.h" />
     <ClInclude Include="src\LevelPortal.h" />
     <ClInclude Include="src\LevelManager.h" />
